# aaa

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  aaa.desktop  build_hooks.sh  cz.yaml  flake.nix  install_desktop.sh  mime.xml  todo.md  typos.toml
art/: BoltzmannBrain.3a  NixOS.3a  Scientific.3a  apple.3a  color_table.3a  distro_aeryn.3a  distro_alpine.3a  distro_arch.3a  distro_cachy.3a  distro_centos.3a  distro_debian.3a  distro_fedora.3a  distro_generic_linux.3a  distro_gentoo.3a  distro_guix.3a  distro_manjaro.3a  distro_mint.3a  distro_mx.3a  distro_nixos.3a  distro_nixos_big.3a  distro_pop.3a  distro_qubes.3a  distro_slackware.3a  distro_suse.3a  distro_ubuntu.3a  distro_void.3a  distro_zorin.3a  dna.3a  flask.3a  knj.3a  question.3a
examples/: lolcat_filter.sh  overlay_filter.sh
src/: drawer.rs  effects.rs  fetch.rs  frames.rs  from_text.rs  generate.rs  hardcode.rs  img.rs  list.rs  loader.rs  main.rs  play.rs  player.rs  preview.rs  strip.rs  to_3a.rs  to_cast.rs  to_dur.rs  to_frames.rs  to_gif.rs  to_json.rs  to_mp4.rs  to_png.rs  to_svg.rs  to_ttyrec.rs  to_webp.rs
src/cmd/: fetch.rs  from_text.rs  generate.rs  list.rs  mod.rs  play.rs  preview.rs
src/cmd/edit/: color.rs  crop.rs  delay.rs  fill.rs  filter.rs  frame.rs  header.rs  mod.rs  pin.rs  print.rs  set.rs  strip.rs  tag.rs
src/cmd/to/: cast.rs  gif.rs  mod.rs  mp4.rs  png.rs  svg.rs  webp.rs
src/edit/: color.rs  crop.rs  delay.rs  effects.rs  fill.rs  filter.rs  frame.rs  header.rs  mod.rs  pin.rs  print.rs  set.rs  tag.rs
