[package]
name = "aaa"
version = "1.1.1"
edition = "2024"
authors = ["DomesticMoth"]
description = "CLI tool for work with 3a files"
repository = "https://github.com/DomesticMoth/aaa"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
crossterm = "0.22"
rs3a = "2.2.8"
clap = { version = "3.1.6", features = ["derive"] }
exitcode = "1.1.2"
argh = "0.1.14"
anyhow = "1.0.101"
rust-embed = "8.11.0"
atty = "0.2.14"
termios = "0.3.3"
ctrlc = "3.5.2"
text-to-png = "0.3.0"
tiny-skia = "0.12.0"
image = "0.25.9"
imageproc = "0.26.0"
rusttype = "0.9.3"
ab_glyph = "0.2.32"
tempfile = "3.25.0"
