[package]
name = "aaa"
version = "1.1.1"
edition = "2024"
authors = ["asciimoth"]
description = "Swiss Army knife for animated ascii art"
repository = "https://github.com/asciimoth/aaa"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
rs3a = "2.4.8"
anyhow = "1.0.101"
rust-embed = "8.11.0"
atty = "0.2.14"
ctrlc = "3.5.2"
image = "0.25.9"
imageproc = "0.26.0"
ab_glyph = "0.2.32"
tempfile = "3.25.0"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"

